--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ dataset/stores.csv
 dataset/test.csv
 dataset/train.csv
 dataset/transactions.csv
+datasets_temporary/X_dropped_sparsity_correlation.csv
